WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36386
[Qt] REGRESSION (
r56209
): fast/media/print-restores-previous-mediatype.htm crashes
https://bugs.webkit.org/show_bug.cgi?id=36386
Summary
[Qt] REGRESSION (r56209): fast/media/print-restores-previous-mediatype.htm cr...
Csaba Osztrogonác
Reported
2010-03-19 13:48:10 PDT
fast/media/print-restores-previous-mediatype.html introduced in ttp://trac.webkit.org/changeset/56209, but it crashes from the beginning on the Qt bot.
Attachments
Patch
(4.91 KB, patch)
2010-03-21 20:36 PDT
,
Kenneth Rohde Christiansen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2010-03-19 14:11:44 PDT
I skipped it temporarily:
http://trac.webkit.org/changeset/56265
Kenneth Rohde Christiansen
Comment 2
2010-03-21 20:36:14 PDT
Created
attachment 51266
[details]
Patch
WebKit Commit Bot
Comment 3
2010-03-22 02:43:34 PDT
Comment on
attachment 51266
[details]
Patch Clearing flags on attachment: 51266 Committed
r56328
: <
http://trac.webkit.org/changeset/56328
>
WebKit Commit Bot
Comment 4
2010-03-22 02:43:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug