2010-03-22  Kenneth Rohde Christiansen  <kenneth@webkit.org>

Reviewed by Simon Hausmann.

        [Qt] REGRESSION (r56209): fast/media/print-restores-previous-mediatype.htm crashes
        https://bugs.webkit.org/show_bug.cgi?id=36386

        * platform/qt/Skipped: unskip the test as it now passes.
2010-03-22  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Simon Hausmann.

        [Qt] REGRESSION (r56209): fast/media/print-restores-previous-mediatype.htm crashes
        https://bugs.webkit.org/show_bug.cgi?id=36386

        Fix the regression by implementing a null printer for Qt DRT.

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::NullPrinter::NullPaintEngine::begin):
        (WebCore::NullPrinter::NullPaintEngine::end):
        (WebCore::NullPrinter::NullPaintEngine::type):
        (WebCore::NullPrinter::NullPaintEngine::drawPixmap):
        (WebCore::NullPrinter::NullPaintEngine::updateState):
        (WebCore::NullPrinter::paintEngine):
        (WebCore::DumpRenderTree::dryRunPrint):

git-svn-id: svn://svn.chromium.org/blink/trunk@56328 bbb929c8-8fbe-4397-9dbb-9b2b20218538