third_party/WebKit/WebKitTools/DumpRenderTree/qt/DumpRenderTreeQt.cpp
@@ -52,6 +52,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <QNetworkAccessManager>
 #include <QNetworkReply>
 #include <QNetworkRequest>
+#include <QPaintDevice>
+#include <QPaintEngine>
 #include <QPrinter>
 #include <QUndoStack>
 #include <QUrl>
@@ -114,6 +116,24 @@ void NetworkAccessManager::sslErrorsEncountered(QNetworkReply* reply, const QLis
     }
 }
 #endif
+
+
+class NullPrinter : public QPrinter {
+public:
+    class NullPaintEngine : public QPaintEngine {
+    public:
+        virtual bool begin(QPaintDevice*) { return true; }
+        virtual bool end() { return true; }
+        virtual QPaintEngine::Type type() const { return QPaintEngine::User; }
+        virtual void drawPixmap(const QRectF& r, const QPixmap& pm, const QRectF& sr) { }
+        virtual void updateState(const QPaintEngineState& state) { }
+    };
+
+    virtual QPaintEngine* paintEngine() const { return const_cast<NullPaintEngine*>(&m_engine); }
+
+    NullPaintEngine m_engine;
+};
+
 
 WebPage::WebPage(QObject* parent, DumpRenderTree* drt)
     : QWebPage(parent)
@@ -390,8 +410,7 @@ static void clearHistory(QWebPage* page)
 
 void DumpRenderTree::dryRunPrint(QWebFrame* frame)
 {
-    QPrinter printer;
-    printer.setPaperSize(QPrinter::A4);
+    NullPrinter printer;
     frame->print(&printer);
 }
 
